# DataQuest-Software

./: CMakeLists.txt  DateQuest.sln  LICENSE  README.md
.github/workflows/: ci.yaml
ServerClient/: ServerClient.cpp  ServerClient.vcxproj  ServerClient.vcxproj.filters
ServerLibrary/: ServerLibrary.cpp  ServerLibrary.h  ServerLibrary.vcxproj  ServerLibrary.vcxproj.filters
WebscrapingClient/: WebscrapingClient.cpp  WebscrapingClient.vcxproj  WebscrapingClient.vcxproj.filters  test.cpp
WebscrapingLibrary/: WebscrapingLibrary.cpp  WebscrapingLibrary.h  WebscrapingLibrary.vcxproj  WebscrapingLibrary.vcxproj.filters  setup.txt  test.cpp
